syntax = "proto3";

message AllocatedSkillPoints {
  int32 attack_power = 1;
  int32 health = 2;
  int32 mana = 3;
  int32 sanity = 4;
}

message BoundingBox {
  int32 height = 1;
  int32 offset_x = 2;
  int32 offset_y = 3;
  int32 width = 4;
}

message Character {
  float affection = 1;
  bool alive = 2;
  string being_type = 3;
  string birthdate = 4;
  string date_cooldown_start = 5;
  string deathdate = 6;
  string first_name = 7;
  string id = 8;
  bool is_player_partner = 9;
  string job = 10;
  string last_name = 11;
  repeated string qualifications = 12;
  string sex = 13;
}

message Condition {
  bool aura = 1;
  repeated string effect = 2;
  repeated float effect_magnitude = 3;
  repeated string effect_style = 4;
  repeated float health_damage = 5;
  string icon = 6;
  string id = 7;
  string name = 8;
  string placed_by = 9;
  repeated float sanity_damage = 10;
  string style = 11;
  int32 turns = 12;
}

message Creature {
  float attack_power = 1;
  float base_armor = 2;
  string being_type = 3;
  repeated Condition conditions = 4;
  string creature_species = 5;
  float energy = 6;
  float energy_max = 7;
  float energy_regen = 8;
  float health = 9;
  float health_max = 10;
  string id = 11;
  float sanity = 12;
  float sanity_max = 13;
  repeated string attacks = 14;
}

message CurrentDungeon {
  Tile current_position = 1;
  repeated Tile dungeon_map = 2;
  Enemy enemy = 3;
  bool fighting_boss = 4;
  string instance = 5;
  string level = 6;
  BoundingBox map_dimensions = 7;
}

message DungeonInstance {
  repeated DungeonLevel levels = 1;
  string name = 2;
}

message DungeonLevel {
  bool boss_defeated = 1;
  repeated string bosses = 2;
  int32 level = 3;
  int32 tiles = 4;
}

message Enemy {
  Creature base = 1;
  repeated Minion minions = 2;
}

message Equipment {
  Item body = 1;
  Item head = 2;
  Item main_hand = 3;
  Item off_hand = 4;
}

message Game {
  bool at_death_screen = 1;
  string color_scheme = 2;
  repeated string completed_instances = 3;
  string date = 4;
  repeated DungeonInstance dungeon_instances = 5;
  float health_warning = 6;
  repeated Shop shops = 7;
  bool tutorials_enabled = 8;
  map<string, bool> tutorials_shown = 9;
  string vibration_enabled = 10;
}

message Investment {
  int32 current_gold_stock_pile = 1;
  int32 gold_invested = 2;
  int32 max_gold_stock_pile = 3;
  int32 maximum_return = 4;
  int32 minimum_return = 5;
  string name = 6;
  int32 turns_per_roll = 7;
  int32 turns_until_next_roll = 8;
  repeated string upgrades = 9;
}

message Item {
  int32 base_value = 1;
  string icon = 2;
  string id = 3;
  string item_class = 4;
  string name = 5;
  string slot = 6;
  bool stackable = 7;
  map<string, float> stats = 8;
}

message JobExperience {
  int32 experience = 1;
  string job = 2;
  int32 rank = 3;
}

message LearningSpell {
  string book_name = 1;
  string element = 2;
  int32 experience = 3;
  string spell_name = 4;
}

message MagicProficiency {
  int32 proficiency = 1;
  string school = 2;
}

message Minion {
  Creature base = 1;
  int32 turns_left_alive = 2;
}

message PlayerCharacter {
  AllocatedSkillPoints allocated_skill_points = 1;
  float attack_power = 2;
  Character base = 3;
  string blessing = 4;
  repeated Character children = 5;
  repeated Condition conditions = 6;
  CurrentDungeon current_dungeon = 7;
  Equipment equipment = 8;
  int32 gold = 9;
  float health = 10;
  float health_max = 11;
  repeated Item inventory = 12;
  repeated Investment investments = 13;
  repeated JobExperience job_experience = 14;
  repeated Character known_characters = 15;
  repeated string known_spells = 16;
  repeated LearningSpell learning_spells = 17;
  repeated MagicProficiency magic_proficiencies = 18;
  float mana = 19;
  float mana_max = 20;
  float mana_regen = 21;
  repeated Minion minions = 22;
  repeated Character parents = 23;
  repeated Character partners = 24;
  repeated string physical_attacks = 25;
  string player_class = 26;
  repeated QualificationProgress qualification_progress = 27;
  float sanity = 28;
  float sanity_max = 29;
  Enemy saved_enemy = 30;
  int32 un_allocated_skill_points = 31;
}

message QualificationProgress {
  bool completed = 1;
  string name = 2;
  int32 progress = 3;
}

message Shop {
  string archetype = 1;
  int32 base_gold = 2;
  int32 current_gold = 3;
  repeated Item inventory = 4;
  string last_stock_refresh = 5;
  Character shop_keeper = 6;
}

message Tile {
  bool cleared_room = 1;
  bool is_boss_room = 2;
  int32 x = 3;
  int32 y = 4;
}

